<package>
  <name>bot_pattern_formation</name>
  <description>Controller for BuPiGo to perform pattern formation task</description>
  <maintainer email="nicholishiell@gmail.com">Nicholi Shiell</maintainer>
  <author>Nicholi Shiell</author>
  <license>FREE</license>
  <version>0.0.0</version>
  <url>www.google.ca</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
</package>
